feat: Add basic Python notes covering functions and modules, along with related assignments and user-defined module examples.

--- a/ABasic_notes/basicOfPython6.ipynb
+++ b/ABasic_notes/basicOfPython6.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "de5d8034",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "e4983a10",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "2b46f735",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "fa01ba5f",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "cd40a61f",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "aa6e7e5f",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "4404b6af",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "0127ee25",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "4f97f645",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "68151629",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "9c5e307d",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "baa6d352",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "2eb63271",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "9da7decd",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "42228fcd",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "0b7a038e",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "a3b679f6",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "06c44993",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "f8fac31d",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "id": "f34d56a2",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "92a00a85",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "ba649c92",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "a8b43189",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "0144fca8",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "481c19f8",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "1a702726",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "778690b1",
    "metadata": {},
    "outputs": [
@@ -890,7 +890,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Number: 29\n"
+      "Random Number: 16\n"
      ]
     }
    ],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "b06a4bfc",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Number: 18\n"
+      "Random Number: 60\n"
      ]
     }
    ],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "id": "5553bc9f",
    "metadata": {},
    "outputs": [
@@ -936,7 +936,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the avg body count of the proud randi is 755\n"
+      "the avg body count of the proud randi is 425\n"
      ]
     }
    ],
@@ -948,23 +948,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "0bb1c6cb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high!\n",
-      "Too high!\n",
-      "Too high!\n",
-      "Too high!\n",
-      "Too low!\n",
-      "Too low!\n",
-      "Too low!\n",
-      "Too low!\n",
-      "Congratulations! You guessed the number in 9 attempts.\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m number = random.randint(\u001b[32m1\u001b[39m, \u001b[32m100\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     guess = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mGuess the number between 1 and 100: \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     guesses += \u001b[32m1\u001b[39m\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m guess < number:\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -990,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "da96c5bf",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "599710f8",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "a000ce22",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "fde9c7d8",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "e124deaa",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "fda77602",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "684a3986",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "87339aec",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "47d25840",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "fdb0f7dd",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "b4d667ac",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "0092e7ae",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "abf19ce2",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "9c366b5f",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "dba7f56a",
    "metadata": {},
    "outputs": [
