feat: add basic OOP concepts and examples in a Python Jupyter Notebook.

--- a/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
+++ b/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f890de7f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "297978c3",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "496bdcbe",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "13c28d7f",
    "metadata": {},
    "outputs": [
@@ -189,8 +189,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2570752146272\n",
-      "2570759541200\n",
+      "2749645576512\n",
+      "2749654854032\n",
       "<class '__main__.MyClass'>\n",
       "<class '__main__.MyClass'>\n"
      ]
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8c9195bd",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3389bfbd",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "351d23ec",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "49055139",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.student object at 0x000002568CC49940>\n"
+      "<__main__.student object at 0x0000028033A5D550>\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "28dcf305",
    "metadata": {},
    "outputs": [
@@ -429,8 +429,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2febb538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tripathi : 1234567890\n",
+      "Contact not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#added the seach feature in the phone book\n",
+    "\n",
+    "class phoneBook:\n",
+    "    # class variable: shared by all objects of this class\n",
+    "    phone_directory = []  \n",
+    "\n",
+    "    def __init__(self, name, phone_number):\n",
+    "        # instance variables: unique to each object\n",
+    "        self.name = name\n",
+    "        self.phone_number = phone_number\n",
+    "\n",
+    "        # add this object (contact) to the class-level directory list\n",
+    "        phoneBook.phone_directory.append(self)\n",
+    "\n",
+    "    def show_contact(self):\n",
+    "        # instance method: shows one contact's details\n",
+    "        return f\"{self.name} : {self.phone_number}\"\n",
+    "\n",
+    "    @classmethod#classmethod is used to define the class method\n",
+    "    def display_contact(cls): #cls is the class variable define by the \n",
+    "        # class method: works with the class itself, not just one object\n",
+    "        if len(cls.phone_directory) == 0:\n",
+    "            print(\"phone directory is empty\")\n",
+    "        else:\n",
+    "            # loop through all contacts stored in the class variable\n",
+    "            for contact in cls.phone_directory:\n",
+    "                # call the instance method to show each contact\n",
+    "                print(contact.show_contact())\n",
+    "    #adding the search method \n",
+    "    @classmethod\n",
+    "    def search_contact(cls, search_contact):\n",
+    "        # class method: works with the class itself, not just one object\n",
+    "        for contact in cls.phone_directory:\n",
+    "            if contact.name == search_contact:\n",
+    "                return contact\n",
+    "        return None\n",
+    "\n",
+    "# create two contact objects\n",
+    "c1 = phoneBook(name=\"tripathi\", phone_number=\"1234567890\")\n",
+    "c2 = phoneBook(name=\"alice\", phone_number=\"9876543210\")\n",
+    "c3=phoneBook(name=\"bob\", phone_number=\"1122334455\")\n",
+    "\n",
+    "#search for the contact\n",
+    "contact=phoneBook.search_contact(\"tripathi\")\n",
+    "print(contact.show_contact())\n",
+    "#taking input from the user\n",
+    "name = input(\"Enter the name to search: \")\n",
+    "contact = phoneBook.search_contact(name)\n",
+    "if contact:\n",
+    "    print(contact.show_contact())\n",
+    "else:\n",
+    "    print(\"Contact not found.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0360ae42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "koi : 1234567890\n",
+      "tripathi : 1234567890\n",
+      "alice : 9876543210\n",
+      "bob : 1122334455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding the staticmethod\n",
+    "# staticmethod is use to define the function inside the class and it can be called without creating the object of the class\n",
+    "#added the seach feature in the phone book\n",
+    "\n",
+    "class phoneBook:\n",
+    "    # class variable: shared by all objects of this class\n",
+    "    phone_directory = []  \n",
+    "\n",
+    "    def __init__(self, name, phone_number):\n",
+    "        # instance variables: unique to each object\n",
+    "        self.name = name\n",
+    "        self.phone_number = phone_number\n",
+    "\n",
+    "        # add this object (contact) to the class-level directory list\n",
+    "        phoneBook.phone_directory.append(self)\n",
+    "\n",
+    "    def show_contact(self):\n",
+    "        # instance method: shows one contact's details\n",
+    "        return f\"{self.name} : {self.phone_number}\"\n",
+    "\n",
+    "    @classmethod#classmethod is used to define the class method\n",
+    "    def display_contact(cls): #cls is the class variable define by the \n",
+    "        # class method: works with the class itself, not just one object\n",
+    "        if len(cls.phone_directory) == 0:\n",
+    "            print(\"phone directory is empty\")\n",
+    "        else:\n",
+    "            # loop through all contacts stored in the class variable\n",
+    "            for contact in cls.phone_directory:\n",
+    "                # call the instance method to show each contact\n",
+    "                print(contact.show_contact())\n",
+    "    #adding the search method \n",
+    "    @classmethod\n",
+    "    def search_contact(cls, search_contact):\n",
+    "        # class method: works with the class itself, not just one object\n",
+    "        for contact in cls.phone_directory:\n",
+    "            if contact.name == search_contact:\n",
+    "                return contact\n",
+    "        return None\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def validate_phone_number(phone_number):\n",
+    "        # static method: works with the class itself, not just one object\n",
+    "        if len(phone_number) == 10 and phone_number.isdigit():\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "number_of_contacts=int(input(\"Enter the number of contacts: \"))\n",
+    "for i in range(number_of_contacts):\n",
+    "    name=input(\"Enter the name: \")\n",
+    "    phone_number=input(\"Enter the phone number: \")\n",
+    "    if phoneBook.validate_phone_number(phone_number):\n",
+    "        phoneBook(name=name, phone_number=phone_number)\n",
+    "    else:\n",
+    "        print(\"Invalid phone number\")\n",
+    "\n",
+    "# create two contact objects\n",
+    "c1 = phoneBook(name=\"tripathi\", phone_number=\"1234567890\")\n",
+    "c2 = phoneBook(name=\"alice\", phone_number=\"9876543210\")\n",
+    "c3=phoneBook(name=\"bob\", phone_number=\"1122334455\")\n",
+    "\n",
+    "#show all contact \n",
+    "phoneBook.display_contact()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e813b9b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this vehical has 3 wheel and 1 seat and 15 milage\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inheritance  means a class can inherit the properties of another class \n",
+    "# eg one class can inherit the properties of another class it can be more than one class \n",
+    "class vehical:\n",
+    "    company=\"tata\"\n",
+    "\n",
+    "    def __init__(self,n_wheel, n_seat,milage):\n",
+    "        self.n_wheel=n_wheel\n",
+    "        self.n_seat=n_seat\n",
+    "        self.milage=milage\n",
+    "\n",
+    "\n",
+    "    def vehical_details(self):\n",
+    "        return f\"this vehical has {self.n_wheel} wheel and {self.n_seat} seat and {self.milage} milage\"\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "v1 = vehical(3,1,15)\n",
+    "print(v1.vehical_details())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8f2efa7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this vehical has 333 wheel and 333 seat and milage of 33 kmpl\n"
+     ]
+    }
+   ],
+   "source": [
+    "#take the input by the user \n",
+    "class vehical:\n",
+    "    company=\"tata\"\n",
+    "\n",
+    "    def __init__(self,n_wheel, n_seat,milage):\n",
+    "        self.n_wheel=n_wheel\n",
+    "        self.n_seat=n_seat\n",
+    "        self.milage=milage\n",
+    "\n",
+    "\n",
+    "    def vehical_details(self):\n",
+    "        return f\"this vehical has {self.n_wheel} wheel and {self.n_seat} seat and milage of {self.milage} kmpl\"\n",
+    "\n",
+    "\n",
+    " #take the input from the user\n",
+    "\n",
+    "n_wheel= int(input(\"enter the number of the wheel your car has : \"))  \n",
+    "n_seat = int(input(\"enter the number of seat the car has : \")) \n",
+    "milage = int(input(\"enter the number of the milage the car has : \"))\n",
+    "\n",
+    "v1 = vehical(n_wheel, n_seat, milage)\n",
+    "print(v1.vehical_details())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "523455e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the init of the car:\n",
+      "this is  init from the vehical  the og class:\n",
+      "<__main__.car object at 0x00000280343D5D30>\n",
+      "tata sieara\n",
+      "this vehical has 4 wheel and 5 seat and milage of 20 kmpl\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vehical:\n",
+    "    company = \"tata\"\n",
+    "\n",
+    "    def __init__(self, n_wheel, n_seat, milage):  # initialize variables\n",
+    "        print(\"this is  init from the vehical  the og class:\")\n",
+    "        self.n_wheel = n_wheel\n",
+    "        self.n_seat = n_seat\n",
+    "        self.milage = milage\n",
+    "\n",
+    "    def vehical_details(self):\n",
+    "        return f\"this vehical has {self.n_wheel} wheel and {self.n_seat} seat and milage of {self.milage} kmpl\"\n",
+    "\n",
+    "\n",
+    "# car class inherits from vehical\n",
+    "class car(vehical):\n",
+    "    model=\"tata sieara\"\n",
+    "    def __init__(self,car_type, drive_type):\n",
+    "        print(\"this is the init of the car:\")\n",
+    "        self.car_type = car_type\n",
+    "        self.drive_type= drive_type\n",
+    "        vehical.__init__(self,4,5,20)\n",
+    "\n",
+    "\n",
+    "   \n",
+    "\n",
+    "c1 = car(\"suv\", \"manual\")\n",
+    "print(c1)\n",
+    "print(c1.model)\n",
+    "print(c1.vehical_details())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c7034a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the init of the car:\n",
+      "this is  init from the vehical  the og class:\n",
+      "<__main__.car object at 0x00000280343D56A0>\n",
+      "tata sieara\n",
+      "this vehical has 4 wheel and 5 seat and milage of 20 kmpl\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vehical:\n",
+    "    company = \"tata\"\n",
+    "\n",
+    "    def __init__(self, n_wheel, n_seat, milage):  # initialize variables\n",
+    "        print(\"this is  init from the vehical  the og class:\")\n",
+    "        self.n_wheel = n_wheel\n",
+    "        self.n_seat = n_seat\n",
+    "        self.milage = milage\n",
+    "\n",
+    "    def vehical_details(self):\n",
+    "        return f\"this vehical has {self.n_wheel} wheel and {self.n_seat} seat and milage of {self.milage} kmpl\"\n",
+    "\n",
+    "\n",
+    "# car class inherits from vehical\n",
+    "class car(vehical):\n",
+    "    model=\"tata sieara\"\n",
+    "    def __init__(self,car_type, drive_type):\n",
+    "        print(\"this is the init of the car:\")\n",
+    "        self.car_type = car_type\n",
+    "        self.drive_type= drive_type\n",
+    "        vehical.__init__(self,4,5,20)\n",
+    "\n",
+    "\n",
+    "   \n",
+    "\n",
+    "c1 = car(\"suv\", \"manual\")\n",
+    "print(c1)\n",
+    "print(c1.model)\n",
+    "print(c1.vehical_details())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a95a3e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#multiple inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d1ca4bc",
    "metadata": {},
    "outputs": [],
    "source": []
