feat: Add Python assignments covering file I/O, data structures, and an introduction to OOP concepts.

--- a/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
+++ b/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
@@ -762,18 +762,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "a95a3e5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 1 is working\n",
+      "feature 2 is working\n",
+      "feature 3 is working\n",
+      "feature 1 is working\n",
+      "feature 2 is working\n",
+      "feature 3 is working\n",
+      "feature 4 is working\n",
+      "feature 1 is working\n",
+      "feature 2 is working\n",
+      "feature 3 is working\n",
+      "feature 4 is working\n",
+      "feature 5 is working\n",
+      "feature 6 is working\n"
+     ]
+    }
+   ],
    "source": [
-    "#multiple inheritance"
+    "#multiple inheritance\n",
+    "\n",
+    "class A:\n",
+    "     def feature1(self):\n",
+    "          print(\"feature 1 is working\")\n",
+    "\n",
+    "     def feature2(self):\n",
+    "          print(\"feature 2 is working\")\n",
+    "\n",
+    "     def feature3(self):\n",
+    "          print(\"feature 3 is working\")\n",
+    "\n",
+    "\n",
+    "class B(A):\n",
+    "     def feature3(self):\n",
+    "          print(\"feature 3 is working\")\n",
+    "\n",
+    "     def feature4(self):\n",
+    "          print(\"feature 4 is working\")\n",
+    "\n",
+    "\n",
+    "class C(B):\n",
+    "     def feature5(self):\n",
+    "          print(\"feature 5 is working\")\n",
+    "\n",
+    "     def feature6(self):\n",
+    "          print(\"feature 6 is working\") \n",
+    "\n",
+    "a = A()\n",
+    "a.feature1()\n",
+    "a.feature2()\n",
+    "a.feature3()\n",
+    "\n",
+    "b = B()\n",
+    "b.feature1()\n",
+    "b.feature2()\n",
+    "b.feature3()\n",
+    "b.feature4()\n",
+    "\n",
+    "c = C()\n",
+    "c.feature1()\n",
+    "c.feature2()\n",
+    "c.feature3()\n",
+    "c.feature4()\n",
+    "c.feature5()\n",
+    "c.feature6()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "aa485bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the Child.\n",
+      "\n",
+      "Accessing parent classes:\n",
+      "I am the Father.\n",
+      "I am the Grandfather.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of Multilevel Inheritance in Python\n",
+    "\n",
+    "# Base class\n",
+    "class Grandfather:\n",
+    "    def show(self):\n",
+    "        print(\"I am the Grandfather.\")\n",
+    "\n",
+    "# Derived from Grandfather\n",
+    "class Father(Grandfather):\n",
+    "    def show(self):\n",
+    "        print(\"I am the Father.\")\n",
+    "\n",
+    "# Derived from Father\n",
+    "class Child(Father):\n",
+    "    def show(self):\n",
+    "        print(\"I am the Child.\")\n",
+    "\n",
+    "# Create object of Child\n",
+    "c = Child()\n",
+    "\n",
+    "# Call methods\n",
+    "c.show()              # Child's method\n",
+    "print(\"\\nAccessing parent classes:\")\n",
+    "super(Child, c).show()   # Calls Father's method\n",
+    "super(Father, c).show()  # Calls Grandfather's method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b99df666",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the Grandfather.\n",
+      "I am the Father.\n",
+      "I am the Child.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple Example of Multilevel Inheritance\n",
+    "\n",
+    "# Base class\n",
+    "class Grandfather:\n",
+    "    def show_grandfather(self):\n",
+    "        print(\"I am the Grandfather.\")\n",
+    "\n",
+    "# Derived from Grandfather\n",
+    "class Father(Grandfather):\n",
+    "    def show_father(self):\n",
+    "        print(\"I am the Father.\")\n",
+    "\n",
+    "# Derived from Father\n",
+    "class Child(Father):\n",
+    "    def show_child(self):\n",
+    "        print(\"I am the Child.\")\n",
+    "\n",
+    "# Create object of Child\n",
+    "c = Child()\n",
+    "\n",
+    "# Call methods from all levels\n",
+    "c.show_grandfather()   # From Grandfather\n",
+    "c.show_father()        # From Father\n",
+    "c.show_child()         # From Child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6d1ca4bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Father: Cooking\n",
+      "Mother: Painting\n",
+      "Child: Dancing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of Multiple Inheritance in Python\n",
+    "\n",
+    "# Parent class 1\n",
+    "class Father:\n",
+    "    def skills(self):\n",
+    "        print(\"Father: Cooking\")\n",
+    "\n",
+    "# Parent class 2\n",
+    "class Mother:\n",
+    "    def skills(self):\n",
+    "        print(\"Mother: Painting\")\n",
+    "\n",
+    "# Child class inherits from both Father and Mother\n",
+    "class Child(Father, Mother):\n",
+    "    def skills(self):\n",
+    "        # Call methods from both parents\n",
+    "        Father.skills(self)\n",
+    "        Mother.skills(self)\n",
+    "        print(\"Child: Dancing\")\n",
+    "\n",
+    "# Create object of Child\n",
+    "c = Child()\n",
+    "c.skills()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1fcdc26c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#polymorphism means one thing can take many forms\n",
+    "a= 10\n",
+    "b= 20\n",
+    "print(a+b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1ca4bc",
+   "id": "3886b8ef",
    "metadata": {},
    "outputs": [],
    "source": []
