--- a/Assignments/Assignment5.ipynb
+++ b/Assignments/Assignment5.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e71572f9",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,8 @@
     }
    ],
    "source": [
-    "\n",
+    "# Create a dictionary called student_marks where each key is a student's name\n",
+    "# and the value is their marks (integer).\n",
     "student_marks = {\n",
     "    \"Alice\": 85,\n",
     "    \"Bob\": 78,\n",
@@ -38,13 +39,17 @@
     "    \"Eva\": 90\n",
     "}\n",
     "\n",
-    "\n",
+    "# Prompt the user to enter a student's name.\n",
+    "# The input() function takes user input as a string and stores it in the variable 'name'.\n",
     "name = input(\"Enter the student's name: \")\n",
     "\n",
-    "\n",
+    "# Check if the entered name exists as a key in the student_marks dictionary.\n",
     "if name in student_marks:\n",
+    "    # If the name exists, print the student's marks using f-string formatting.\n",
+    "    # f\"{name}'s marks: {student_marks[name]}\" dynamically inserts the student's name and marks.\n",
     "    print(f\"{name}'s marks: {student_marks[name]}\")\n",
     "else:\n",
+    "    # If the name does not exist in the dictionary, print a message saying student not found.\n",
     "    print(\"Student not found in the dictionary.\")"
    ]
   },
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e88d0903",
    "metadata": {},
    "outputs": [
@@ -77,17 +82,22 @@
     }
    ],
    "source": [
-    "\n",
+    "# Create a list of numbers from 1 to 10 using range().\n",
+    "# range(1, 11) generates numbers from 1 up to (but not including) 11.\n",
     "numbers = list(range(1, 11))\n",
     "\n",
-    "\n",
+    "# Extract the first five elements from the list using slicing.\n",
+    "# numbers[:5] means \"take elements from index 0 up to (but not including) index 5\".\n",
     "first_five = numbers[:5]\n",
     "\n",
-    "\n",
+    "# Reverse the extracted list using slicing with a step of -1.\n",
+    "# first_five[::-1] means \"take the list from end to start\".\n",
     "reversed_list = first_five[::-1]\n",
     "\n",
-    "\n",
+    "# Print the extracted list (first five numbers).\n",
     "print(\"Extracted list:\", first_five)\n",
+    "\n",
+    "# Print the reversed version of the extracted list.\n",
     "print(\"Reversed list:\", reversed_list)"
    ]
   }
